Udvid API og omstrukturér klientkoden
